# workshop-walker

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  changelog.md  clippy.toml  contributing.md  readme.md  release-plz.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: lint.yml  release.yml
.junie/: guidelines.md
classification/: CHANGELOG.md  Cargo.toml  READEME.md  prompt1.txt  prompt2.txt
classification/src/: actor.rs  hub.rs  lib.rs  runner.rs  test1.txt  test2.txt  test3.txt
classification/test_data/: data0.json  data1.json  data2.json  data3.json  data4.json
macros/: CHANGELOG.md  Cargo.toml
macros/src/: lib.rs
migrations/: 001-create-database.surql  20250612_150541_users_and_votes.surql  20250717_120822_missing_migrations.surql  20251201_105542_add_workshop_item_id_index.surql  20251222_163055_user_names.surql  20251222_163220_who_voted.surql  20251229_171005_add_tags_to_app.surql
migrations/definitions/: 20250529_154431_setup.json  _initial.json
prompts/: features.txt  genres.txt
schemas/: item_dependencies.surql  tags.surql  workshop_items.surql
serde-hack/: Cargo.toml
serde-hack/src/: lib.rs  size_hint.rs
src/: actors.rs  app_config.rs  auth.rs  db.rs  language.rs  main.rs  model.rs
src/application/: admin_service.rs  apps_service.rs  mod.rs  properties_service.rs  tags_service.rs  user_names_service.rs
src/db/: admin_actor.rs  admin_repository.rs  apps_actor.rs  apps_repository.rs  item_update_actor.rs  mod.rs  model.rs  properties_actor.rs  properties_repository.rs  tags_repository.rs  user_names_repository.rs
src/domain/: admin.rs  apps.rs  mod.rs  properties.rs  tags.rs  user_names.rs
src/processing/: bb_actor.rs  join_process_actor.rs  language_actor.rs  ml_queue_actor.rs  mod.rs
src/steam/: dead.json  foo.rs  mod.rs  model.rs  steam_download_actor.rs  steam_tag_actor.rs  steam_user_actor.rs  test_1.json  test_all.json
src/web/: admin.rs  apps.rs  auth.rs  companions.rs  item.rs  mod.rs  properties.rs  query.rs
ui/: .gitignore  package-lock.json  package.json  svelte.config.js  vite.config.ts
ui/project.inlang/: project_id  settings.json
ui/src/: app.css  app.html  workshop-walker.css
ui/src/lib/: app_card.svelte  timeAgo.svelte  timePicker.svelte
ui/src/routes/: +layout.svelte  +page.svelte  +page.ts
ui/src/routes/admin/: +page.svelte  +page.ts  AdminApps.svelte
ui/src/routes/app/[id]/: +page.svelte  +page.ts  store.svelte.ts
ui/src/routes/demo/paraglide/: +page.svelte
ui/src/routes/item/[item]/: +page.svelte  +page.ts  Companion.svelte  Property.svelte  PropertyPrompt.svelte
ui/src/routes/test3/: +page.svelte  VisualQuery.svelte
