[workspace]
members = ["macros", "serde-hack", "classification"]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MPL-2"

[workspace.dependencies]
classification = { path = "./classification" }
macros = { path = "./macros" }
serde-hack = { path = "./serde-hack" }

bbscope = "0.2"
biscuit-auth = "6.0.0-beta.3"
candle-core = { version = "0.9" }
candle-examples = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
chrono = "0.4"
config = "0.15"
hf-hub = "0.4"
humantime = "2.2"
intel-mkl-src = { version = "0.8" }
itertools = "0.14"
lingua = { version = "1.7", features = ["english", "russian", "chinese", "japanese", "korean"] }
multimap = "0.10"
ractor = { version = "0.15", features = ["monitors", "async-trait"] }
reqwest = { version = "0.12", features = ["json", ] }
rs-snowflake = "0.6"
salvo = { version = "0.84", features = ["oapi", "logging", "serve-static", "affix-state", "cookie", "size-limiter"] }
serde = { version = "1.0", features = ["derive"] }
serde-content = "0.1"
serde-xml-rs = "0.8.1"
serde_json = "1.0"
serde_repr = "0.1"
snafu = "0.8"
str-macro = "1"
surrealdb = { version = "2.4", features = ["kv-rocksdb", "allocator", "protocol-http", "protocol-ws", "rustls", "kv-mem"] }
surrealdb-migrations = "2.2"
tokenizers = "0.21"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
veil = "0.2"

[package]
name = "workshop-walker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bbscope.workspace = true
biscuit-auth.workspace = true
chrono.workspace = true
classification = { workspace = true, optional = true }
config.workspace = true
humantime.workspace = true
itertools.workspace = true
lingua = { workspace = true, features = ["english", "russian", "chinese", "japanese", "korean"] }
macros.workspace = true
multimap.workspace = true
ractor = { workspace = true, features = ["monitors", "async-trait"] }
reqwest = { workspace = true, features = ["json", ] }
rs-snowflake.workspace = true
salvo = { workspace = true, features = ["oapi", "logging", "serve-static", "affix-state", "cookie", "size-limiter"] }
serde = { workspace = true, features = ["derive"] }
serde-content.workspace = true
serde-hack.workspace = true
serde-xml-rs.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
snafu.workspace = true
str-macro.workspace = true
surrealdb = { workspace = true, features = ["kv-rocksdb", "allocator", "protocol-http", "protocol-ws", "rustls", "kv-mem"] }
surrealdb-migrations.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "fs", "sync"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
veil.workspace = true

[features]
default = ["ml-classification"]
ml-classification = ["classification", "classification/mkl"]


[patch.crates-io]
surrealdb-migrations = { git = "https://github.com/disconsented/surrealdb-migrations.git" }

[profile.release]
lto = true
opt-level = 3
panic = 'abort'
#codegen-units = 1

[profile.dev.package.surrealdb]
opt-level = 3

[lints.clippy]
lint_groups_priority = { level = "allow", priority = 0 }
suspicious = { level = "deny", priority = 1 }
style = { level = "deny", priority = 2 }
perf = { level = "deny", priority = 4 }
pedantic = { level = "deny", priority = 5 }
correctness = { level = "deny", priority = 6 }
complexity = { level = "warn", priority = 7 }
dbg_macro = { level = "deny", priority = 8 }
allow-dbg-in-tests = { level = "allow", priority = 9 }
pub_with_shorthand = { level = "allow", priority = 10 }

[target.x86_64-unknown-linux-gnu]
rustflags = "-C target-cpu=x86-64-v3"
