[package]
name = "classification"
version.workspace = true
edition.workspace = true

[dependencies]
snafu.workspace = true
candle-core.workspace = true
intel-mkl-src = { workspace = true, optional = true }
candle-transformers.workspace = true
candle-nn.workspace = true
hf-hub.workspace = true
tokenizers.workspace = true
serde_json.workspace = true
candle-examples.workspace = true
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true
ractor.workspace = true
tokio.workspace = true

[features]
default = ["mkl"]
mkl = ["dep:intel-mkl-src", "candle-core/mkl"]
